# Spotify-Analysis-Data-Collection-

./: .cache  .gitignore  README.md  churn_analysis.ipynb  data_collection.ipynb  data_preprocessing.ipynb  emotion_analysis.ipynb  main.ipynb  pyproject.toml  requirements.txt  spanalysis_dataanalysis.ipynb  spanalysis_datacollect.ipynb
datasets/: daily_streaming_emotion.csv  lyrics_emotion.csv  podcasts_df.csv  top_artists_per_month.csv  tracks_features_df.csv  tracks_info_df.csv  tracks_info_df_isrc.csv
