[tool.poetry]
name = "my-spotify-usage-analysis"
version = "0.1.0"
description = ""
authors = ["nazhifkojaz <kojazkojaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argcomplete = "3.5.0"
asttokens = "2.4.1"
bar-chart-race = "0.1.0"
build = "1.2.2"
cachecontrol = "0.14.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
comm = "0.2.2"
contourpy = "1.3.0"
crashtest = "0.4.1"
cycler = "0.12.1"
debugpy = "1.8.6"
decorator = "5.1.1"
distlib = "0.3.8"
dulwich = "0.21.7"
executing = "2.1.0"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
fonttools = "4.54.1"
idna = "3.10"
importlib-metadata = "8.5.0"
installer = "0.7.0"
ipykernel = "6.29.5"
ipython = "8.28.0"
jaraco-classes = "3.4.0"
jedi = "0.19.1"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
keyring = "24.3.1"
kiwisolver = "1.4.7"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
more-itertools = "10.5.0"
msgpack = "1.1.0"
nest-asyncio = "1.6.0"
numpy = "2.1.1"
packaging = "24.1"
pandas = "2.2.3"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.4.0"
pipx = "1.7.1"
pkginfo = "1.11.1"
platformdirs = "4.3.6"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
prompt-toolkit = "3.0.48"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pygments = "2.18.0"
pyparsing = "3.1.4"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pywin32 = "306"
pywin32-ctypes = "0.2.3"
pyzmq = "26.2.0"
rapidfuzz = "3.10.0"
redis = "5.1.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
scipy = "1.14.1"
seaborn = "0.13.2"
shellingham = "1.5.4"
six = "1.16.0"
spotipy = "2.24.0"
stack-data = "0.6.3"
tomlkit = "0.13.2"
tornado = "6.4.1"
traitlets = "5.14.3"
trove-classifiers = "2024.9.12"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
userpath = "1.9.2"
virtualenv = "20.26.6"
wcwidth = "0.2.13"
zipp = "3.20.2"
lyricsgenius = "^3.0.1"
langdetect = "^1.0.9"
transformers = "^4.45.2"
torch = "^2.4.1"
scikit-learn = "^1.5.2"
squarify = "^0.4.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
